//
//  Feed.swift
//  FotoLoop
//
//  Created by David Lourenço on 04/10/2024.
//

import SwiftUI

struct Feed: View {

    var body: some View {
        Text("This is the Feed screen!")
            .accessibilityIdentifier("FeedScreen")
    }
}

#Preview {
    Feed()
}
