//
//  Profile.swift
//  FotoLoop
//
//  Created by David Lourenço on 04/10/2024.
//

import SwiftUI

struct Profile: View {
    var body: some View {
        Text("This is the Profile screen!").accessibilityIdentifier("ProfileScreen")
    }
}

#Preview {
    Profile()
}
