...
                            .accessibilityIdentifier("ForgotPasswordButton")
                    }

                    FLButton(buttonText: LoginConstants.Login.login, action: {

                        navViewModel.goToTabs()
                    }).accessibilityIdentifier("LoginButton")
                    FLSimpleButton(buttonText:
                                    FLStrings
                        .createAttributedString(stringToTransform: LoginConstants.Login.signUp,
                                                substringToStyle: "Sign Up"), action: {
                        navViewModel.goToRegister()
                    })
...
